tabs and text presenting support

--- a/demo/src/upload-data/Upload.scss
+++ b/demo/src/upload-data/Upload.scss
@@ -1,11 +1,13 @@
 .container {
   height: 1vh;
   width: auto;
+  margin: 0px 200px 0px 200px;
 }
 
 .section {
   margin: 20 20 20 20;
   padding: 20px;
+  background-color: lightsalmon;
 }
 
 .progress-container {
