fix demo text viewer and added content

--- a/demo/src/upload-data/Upload.scss
+++ b/demo/src/upload-data/Upload.scss
@@ -1,11 +1,10 @@
 .container {
-  height: 1vh;
+  height: 100%;
   width: auto;
   margin: 0px 200px 0px 200px;
 }
 
 .section {
-  margin: 20 20 20 20;
   padding: 20px;
   background-color: lightsalmon;
 }
