--- a/demo/src/text-viewer/RicosViewer.scss
+++ b/demo/src/text-viewer/RicosViewer.scss
@@ -1,6 +1,7 @@
-.container {
+.viewer {
   height: 100%;
   width: auto;
   margin: 0px 200px 0px 200px;
-  background-color: white;
+  overflow: scroll;
+  padding: 20px;
 }
