--- a/demo/src/text-viewer/RicosViewer.scss
+++ b/demo/src/text-viewer/RicosViewer.scss
@@ -1,7 +1,40 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:300");
+@import url("https://fonts.googleapis.com/css?family=Raleway");
+
+@mixin lato-light {
+  font-family: "Lato";
+  font-weight: 300;
+  font-style: normal;
+}
+
+@mixin raleway {
+  font-family: "Raleway";
+  font-weight: 400;
+  font-style: normal;
+}
+
+.regularText {
+  @include lato-light;
+}
+
+.headerText {
+  @include raleway;
+}
+
 .viewer {
   height: 100%;
-  width: auto;
-  margin: 0px 500px 0px 500px;
+  width: 40%;
+  margin: auto;
   overflow: scroll;
   padding: 20px;
+  @extend .regularText !optional;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @extend .headerText !optional;
 }
