content addition and more sensible design

--- a/demo/src/upload-data/Upload.module.css
+++ b/demo/src/upload-data/Upload.module.css
@@ -1,7 +1,8 @@
 .container {
   height: 100%;
-  width: 60%;
-  margin: auto;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .section {
